--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ nav{
     background-color:#1B0F44;
     color:white;
     padding:10px 100px;
+    border-bottom:4px solid #401E63;
 }
 
 
@@ -43,15 +44,45 @@ nav ul li a:hover{
     border-radius:5px;
 }
 
+/* main area code start  */
 
+header{
+    background-image:url('images/website\ banner.jpg');
+    background-repeat: no-repeat;
+    background-position:center;
+    background-size:cover;
+    padding:200px 0px;
+}
+.search-box-icon-parent{
+    display:flex;
+    justify-content:center;
+    align-items:Center;
+}
+.icon-div{
+    padding-left:-50px;
+}
 
+.icon-div i{
+    color:red;
+    background-color:green;
+    font-size:25px;
+    height:40px;
+    width:50px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    border-radius:5px;
+    cursor:pointer;
+    margin-left:-10px;
+}
 
-
-
-
-
-
-
+.search-box-icon-parent input{
+    height:40px;
+    width:400px;
+    border-radius:5px;
+    font-size:20px;
+    padding:5px 20px;
+}
 
 
 
